# prototype/quarkus/eh-ma-quarkus-licenseservice/src/main/java/com/hrbatovic/master/quarkus/license/db/entities/LicenseTemplateEntity.java
@@ -1,0 +1,78 @@
+package com.hrbatovic.master.quarkus.license.db.entities;
+
+import io.quarkus.mongodb.panache.PanacheMongoEntityBase;
+import io.quarkus.mongodb.panache.common.MongoEntity;
+import org.bson.codecs.pojo.annotations.BsonId;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
+
+@MongoEntity(collection = "license-templates")
+public class LicenseTemplateEntity extends PanacheMongoEntityBase {
+
+    @BsonId
+    private UUID id;
+
+    private UUID productId;
+
+    private Integer licenseDuration;
+
+    private LocalDateTime createdAt;
+
+    private LocalDateTime updatedAt;
+
+    public LicenseTemplateEntity() {
+        this.id = UUID.randomUUID();
+    }
+
+    public UUID getId() {
+        return id;
+    }
+
+    public void setId(UUID id) {
+        this.id = id;
+    }
+
+    public UUID getProductId() {
+        return productId;
+    }
+
+    public void setProductId(UUID productId) {
+        this.productId = productId;
+    }
+
+    public Integer getLicenseDuration() {
+        return licenseDuration;
+    }
+
+    public void setLicenseDuration(Integer licenseDuration) {
+        this.licenseDuration = licenseDuration;
+    }
+
+    public LocalDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(LocalDateTime createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public LocalDateTime getUpdatedAt() {
+        return updatedAt;
+    }
+
+    public void setUpdatedAt(LocalDateTime updatedAt) {
+        this.updatedAt = updatedAt;
+    }
+
+    @Override
+    public String toString() {
+        return "LicenseTemplateEntity{" +
+                "id=" + id +
+                ", productId=" + productId +
+                ", licenseDuration=" + licenseDuration +
+                ", createdAt=" + createdAt +
+                ", updatedAt=" + updatedAt +
+                '}';
+    }
+}
